kubernetes/kustomize/photodb/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: photodb-container
  name: photodb
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    app: photodb
